--- a/Home page.html
+++ b/Home page.html
@@ -7,7 +7,7 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body class="bg-gradient-to-r from-purple-900 to-indigo-500">
+<body style="background-image: linear-gradient(to right,black,purple);">
     <section class="text-gray-600 body-font">
   <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
     <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
@@ -21,7 +21,7 @@
         <button class="inline-flex text-pink-800 bg-white border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">My Projects</button>
         <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg bg-indigo-500">Download CV</button>
       </div><br>
-      <div class="display-flex gap-10px padding-10px justify-content-center">
+      <div style="display: flex; gap: 10px; justify-content: center; padding: 20px; margin-left: 60px; padding-top: 0;">
       <i class="fa fa-instagram bg-white rounded-lg text-lg" aria-hidden="true" text-white></i>
       <i class="fa fa-linkedin bg-white rounded- text-lg" aria-hidden="true"></i>
       <i class="fa fa-twitter-square bg-white rounded-lg text-lg" aria-hidden="true"></i>
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-      <img class="object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
+      <img class="object-cover object-center rounded" alt="hero" src="profile.avif" style="width: 500px; height: 400px;">
     </div>
   </div>
 </section>
