--- a/Services.html
+++ b/Services.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Services</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body style="background-image: linear-gradient(to right,black,purple);">
     <section class="text-gray-600 body-font">
@@ -15,11 +16,13 @@
     <div class="flex flex-wrap -m-4 text-center">
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
         <div class="border-2 border-gray-200 px-4 py-6 rounded-lg">
-          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="text-indigo-500 w-12 h-12 mb-3 inline-block" viewBox="0 0 24 24">
-            <path d="M8 17l4 4 4-4m-4-5v9"></path>
+             <img src="laptop.png" alt="laptop" style="width: 100px;height: 100px;align-items: center;margin-left: 80px; padding: 0; margin-bottom: 0;">
+                <path d="M8 17l4 4 4-4m-4-5v9"></path>
             <path d="M20.88 18.09A5 5 0 0018 9h-1.26A8 8 0 103 16.29"></path>
+          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="text-indigo-500 w-12 h-12 mb-3 inline-block" viewBox="0 0 24 24">
+        
           </svg>
-          <h2 class="title-font font-medium text-3xl text-white">UI/UX</h2>
+          <h2 class="title-font font-medium text-3xl text-white padding-top-0">UI/UX</h2>
           <p class="leading-relaxed text-white">Creating intuitive and visually appealing designs that enhance user experience</p>
         </div>
       </div>
