--- a/Services.html
+++ b/Services.html
@@ -29,7 +29,8 @@
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
         <div class="border-2 border-purple-500 px-4 py-6 rounded-lg">
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="text-indigo-500 w-12 h-12 mb-3 inline-block" viewBox="0 0 24 24">
-            <path d="M17 21v-2a4 4 0 00-4-4H5a4 4 0 00-4 4v2"></path>
+           
+            <img src="Monitor.png" alt="Monitor" style="width: 100px; height: 100px; margin-top:0px; padding:0%; margin-left: 80px; margin-bottom: 50px">
             <circle cx="9" cy="7" r="4"></circle>
             <path d="M23 21v-2a4 4 0 00-3-3.87m-4-12a4 4 0 010 7.75"></path>
           </svg>
