--- a/Services.html
+++ b/Services.html
@@ -30,9 +30,9 @@
         <div class="border-2 border-purple-500 px-4 py-6 rounded-lg">
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="text-indigo-500 w-12 h-12 mb-3 inline-block" viewBox="0 0 24 24">
            
-            <img src="Monitor.png" alt="Monitor" style="width: 100px; height: 100px; margin-top:0px; padding:0%; margin-left: 80px; margin-bottom: 50px">
-            <circle cx="9" cy="7" r="4"></circle>
-            <path d="M23 21v-2a4 4 0 00-3-3.87m-4-12a4 4 0 010 7.75"></path>
+            <img src="Monitor.png" alt="Monitor" style="width: 80px; height: 80px; margin-top:0px; padding:0%; margin-left: 80px; margin-bottom: 50px">
+            <circle cx="7" cy="7" r="4"></circle>
+           
           </svg>
           <h2 class="title-font font-medium text-3xl text-white">Web Design</h2>
           <p class="leading-relaxed text-white">Designing responsive and engaging websites tailored to user needs</p>
@@ -41,6 +41,7 @@
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
         <div class="border-2 border-pink-200 px-4 py-6 rounded-lg">
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="text-indigo-500 w-12 h-12 mb-3 inline-block" viewBox="0 0 24 24">
+            <img src="Phone.png" alt="phone" style="width: 80px;height: 80px; margin-left:80px; margin-top:0px; margin-bottom:20px">
             <path d="M3 18v-6a9 9 0 0118 0v6"></path>
             <path d="M21 19a2 2 0 01-2 2h-1a2 2 0 01-2-2v-3a2 2 0 012-2h3zM3 19a2 2 0 002 2h1a2 2 0 002-2v-3a2 2 0 00-2-2H3z"></path>
           </svg>
