--- a/Services.html
+++ b/Services.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <title>Services</title>
+    <style>
+        .zoom:hover{
+            transform: scale(1.5);
+        }
+    </style>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -15,7 +20,7 @@
     </div>
     <div class="flex flex-wrap -m-4 text-center">
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
-        <div class="border-2 border-gray-200 px-4 py-6 rounded-lg">
+        <div class="border-2 border-gray-200 px-4 py-6 rounded-lg zoom">
              <img src="laptop.png" alt="laptop" style="width: 100px;height: 100px;align-items: center;margin-left: 80px; padding: 0; margin-bottom: 0;">
                 <path d="M8 17l4 4 4-4m-4-5v9"></path>
             <path d="M20.88 18.09A5 5 0 0018 9h-1.26A8 8 0 103 16.29"></path>
@@ -27,7 +32,7 @@
         </div>
       </div>
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
-        <div class="border-2 border-purple-500 px-4 py-6 rounded-lg">
+        <div class="border-2 border-purple-500 px-4 py-6 rounded-lg zoom">
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="text-indigo-500 w-12 h-12 mb-3 inline-block" viewBox="0 0 24 24">
            
             <img src="Monitor.png" alt="Monitor" style="width: 80px; height: 80px; margin-top:0px; padding:0%; margin-left: 80px; margin-bottom: 50px">
@@ -39,7 +44,7 @@
         </div>
       </div>
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
-        <div class="border-2 border-pink-200 px-4 py-6 rounded-lg">
+        <div class="border-2 border-pink-200 px-4 py-6 rounded-lg zoom">
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="text-indigo-500 w-12 h-12 mb-3 inline-block" viewBox="0 0 24 24">
             <img src="Phone.png" alt="phone" style="width: 80px;height: 80px; margin-left:80px; margin-top:0px; margin-bottom:20px">
             <path d="M3 18v-6a9 9 0 0118 0v6"></path>
@@ -50,9 +55,9 @@
         </div>
       </div>
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
-        <div class="border-2 border-purple-500 px-4 py-6 rounded-lg">
+        <div class="border-2 border-purple-500 px-4 py-6 rounded-lg zoom">
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="text-indigo-500 w-12 h-12 mb-3 inline-block" viewBox="0 0 24 24">
-            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+            <img src="Prototyping.png" alt="Prototyping" style="width: 100px;Height: 100px; margin-left:80px; margin-top:0px">
           </svg>
           <h2 class="title-font font-medium text-3xl text-white">Prototyping & Wire Framing</h2>
           <p class="leading-relaxed text-white">Building interactive prototypes and structured wire wireframes for better design flow</p>
