--- a/Home page.html
+++ b/Home page.html
@@ -3,11 +3,40 @@
 <head>
     <meta charset="UTF-8" />
     <title>Tailwind CSS</title>
+    <style>body{
+              margin:0;
+              padding:0;
+          nav {
+          display: flex;
+          justify-content: space-between;
+          padding:1rem;
+
+          }
+          h3{
+              color: blanchedalmond ;
+              font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+              
+          }
+          a {
+              text-decoration: none;
+              color:blanchedalmond;
+              padding-right: 10px;
+          }
+          </style>
     
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body style="background-image: linear-gradient(to right,black,purple);">
+  <nav>
+      <div>
+        <a href="Home page.html">// Home</a>
+        <a href="projects.html">// Projects</a>
+        <a href="Services.html">// Services</a>
+        <a href="Testimonials.html">// Testimonials</a>
+        <a href="contact.html"> // Contact Us</a>
+      </div>
+    </nav>
     <section class="text-gray-600 body-font">
   <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
     <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
