--- a/Testimonials.html
+++ b/Testimonials.html
@@ -3,10 +3,40 @@
 <head>
     <meta charset="UTF-8" />
     <title>Testimanials</title>
+    <style>
+      body{
+              margin:0;
+              padding:0;
+          nav {
+          display: flex;
+          justify-content: space-between;
+          padding:1rem;
+
+          }
+          h3{
+              color: blanchedalmond ;
+              font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+              
+          }
+          a {
+              text-decoration: none;
+              color:blanchedalmond;
+              padding-right: 10px;
+          }
+    </style>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body style="background-image: linear-gradient(to right,black,purple);">
+   <nav>
+      <div>
+        <a href="Home page.html">// Home</a>
+        <a href="projects.html">// Projects</a>
+        <a href="Services.html">// Services</a>
+        <a href="Testimonials.html">// Testimonials</a>
+        <a href="contact.html"> // Contact Us</a>
+      </div>
+    </nav>
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
     <h1 class="text-3xl font-larger title-font text-white mb-12 text-center">Testimonials</h1>
