--- a/about.html
+++ b/about.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+    body{
+              margin:0;
+              padding:0;
+          nav {
+          display: flex;
+          justify-content: space-between;
+          padding:1rem;
+
+          }
+          h3{
+              color: blanchedalmond ;
+              font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+              
+          }
+          a {
+              text-decoration: none;
+              color:blanchedalmond;
+              padding-right: 10px;
+          }
+  </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
@@ -8,6 +29,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body style="background-image: linear-gradient(to right,black,purple);" >
+  <nav>
+      <div>
+        <a href="Home page.html">// Home</a>
+        <a href="about.html">// About Me</a>
+        <a href="Services.html">// Services</a>
+        <a href="projects.html">// Projects</a>
+        <a href="Testimonials.html">// Testimonials</a>
+        <a href="contact.html"> // Contact Us</a>
+      </div>
+    </nav>
     <h2 class="text-white text-center text-3xl pt-10">About Me</h2>
 
     <section class="text-pink-100 body-font">
