--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
      <nav>
       <div>
         <a href="Home page.html">// Home</a>
-        <a href="about.html">About Me</a>
+        <a href="about.html">// About Me</a>
         <a href="projects.html">// Projects</a>
         <a href="Services.html">// Services</a>
         <a href="Testimonials.html">// Testimonials</a>
