--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
       body{
               margin:0;
               padding:0;
+      }
           nav {
           display: flex;
           justify-content: space-between;
@@ -55,7 +56,7 @@
             <div class="bg-pink-900 p-6 rounded-lg">
               <img
                 class="h-40 rounded w-full object-cover object-center mb-6"
-                src="https://dummyimage.com/720x400"
+                src="flat-world-graphics-day-illustration_23-2148880103.avif"
                 alt="content"
               />
               <h3
@@ -80,7 +81,7 @@
             <div class="bg-pink-900 p-6 rounded-lg">
               <img
                 class="h-40 rounded w-full object-cover object-center mb-6"
-                src="https://dummyimage.com/721x401"
+                src="web-design-coding-program-content-graphic.jpg"
                 alt="content"
               />
               <h3
@@ -105,7 +106,7 @@
             <div class="bg-pink-900 p-6 rounded-lg">
               <img
                 class="h-40 rounded w-full object-cover object-center mb-6"
-                src="https://dummyimage.com/722x402"
+                src="2947181.jpg"
                 alt="content"
               />
               <h3
@@ -130,7 +131,7 @@
             <div class="bg-pink-900 p-6 rounded-lg">
               <img
                 class="h-40 rounded w-full object-cover object-center mb-6"
-                src="https://dummyimage.com/723x403"
+                src="2951471.jpg"
                 alt="content"
               />
               <h2
