hover color changed

--- a/about.html
+++ b/about.html
@@ -51,6 +51,7 @@
       
         
       <p class="mb-8 leading-relaxed">Welcome to my portfolio!I'm Sara Howari, a passionate UI/UX designer dedicated to creating seamless and visually engaging digital experiences. With 2 years of experience, I specialise in designing intuitive interfaces that enhance usability and user satisfaction.</p>
+      <!-- Icons can be added in the p tag -->
       <p>My skills include wireframing, prototyping, and user research,ensuring that each design is both aesthetically pleasing and functionally efficient. I have worked on diverse projects, including mobil apps, web platforms andinteractive dashboards, always focusing on user-centered solutions that drive engagement.</p>
       <!-- insert icon -->
       <div>
