--- a/projects.html
+++ b/projects.html
@@ -116,7 +116,7 @@
               </h3>
               <p class="text-lg text-white font-medium title-font mb-4">
                 <button
-                  class="w-fit px-6 py-3 mt-4 text-sm font-medium tracking-wide text-black capitalize transition-colors duration-300 transform bg-white rounded-lg hover:bg-white focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-50"
+                  class="w-fit px-6 py-3 mt-4 text-sm font-medium tracking-wide text-black capitalize transition-colors duration-300 transform bg-white rounded-lg hover:bg-blue-400 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-50"
                 >
                   App Design
                 </button>
