--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     body{
               margin:0;
               padding:0;
+    }
           nav {
           display: flex;
           justify-content: space-between;
@@ -44,7 +45,7 @@
     <section class="text-pink-100 body-font">
   <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
-      <img class="object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
+      <img class="object-cover object-center rounded" alt="hero" src="profile_pic.avif">
     </div>
     <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
       
