color on navbar

--- a/Home page.html
+++ b/Home page.html
@@ -31,7 +31,7 @@
 </head>
 <body style="background-image: linear-gradient(to right,black,purple);">
   <nav>
-      <div>
+      <div style="color: blanchedalmond;">
         <a href="Home page.html">// Home</a>
         <a href="about.html">// About Me</a>
         <a href="Services.html">// Services</a>
