--- a/Testimonials.html
+++ b/Testimonials.html
@@ -30,7 +30,7 @@
 </head>
 <body style="background-image: linear-gradient(to right,black,purple);">
    <nav>
-      <div>
+      <div style="color: blanchedalmond;">
         <a href="Home page.html">// Home</a>
         <a href="about.html">// About Me</a>
         <a href="Services.html">// Services</a>
